Issue IMCMS-747 Make generic export from RB4 and import to RB6: - set visible true to all imported documents and publish them after import - improve ui

--- a/src/main/webapp/imcms/css/admin/imcms-super-admin.css
+++ b/src/main/webapp/imcms/css/admin/imcms-super-admin.css
@@ -613,17 +613,30 @@
 }
 
 .table-links,
-.table-import-documents{
+.sections-container__edit-area{
     width: 100%;
     background-color: ghostwhite;
     border: 1px solid gainsboro;
     word-break: break-word;
 }
 
-.table-import-documents {
+.sections-container__edit-area {
+    display: none;
+    height: 74%;
 	overflow: auto;
-	height: 510px;
     margin: 0 5px 0 5px;
+}
+
+.sections-container__edit-area.edit-documents{
+    height: 84%;
+}
+
+.sections-container__edit-area.references{
+    height: 89%;
+}
+
+.sections-container__edit-area.import{
+    height: 82%;
 }
 
 .link-title-row.link-title,
@@ -1700,6 +1713,7 @@
 .sections-container .control-buttons{
     display: inline-block;
     width: 100%;
+    height: 5%;
     position: absolute;
     bottom: 0;
 }
@@ -1712,7 +1726,7 @@
 .upload-documents-section .upload-area {
     border: 2px dashed #ccc;
     border-radius: 20px;
-    max-width: 500px;
+    max-width: 50%;
     min-width: 300px;
     margin: 0 auto;
     padding: 20px;
@@ -1894,27 +1908,18 @@
     margin: 0 5px 0 5px;
 }
 
-.import-entity-references-section .import-entity-references-section__import-entity-reference-container{
-    height: 665px;
-    overflow: auto;
-    width: 100%;
-    background-color: ghostwhite;
-    border: 1px solid gainsboro;
-    word-break: break-word;
-}
-
-.import-entity-references-section .import-entity-references-section__import-entity-reference-container .imcms-import-entity-reference-manager-row .imcms-import-entity-reference-manager-row__text>input{
+.sections-container__edit-area .imcms-import-entity-reference-manager-row .imcms-import-entity-reference-manager-row__text>input{
     opacity: 0.7;
 }
 
-.import-entity-references-section .import-entity-references-section__import-entity-reference-container .titles{
-    padding: 1% 4% 0% 4%;
+.sections-container__edit-area .titles{
+    padding: 1% 4% 0 4%;
 }
 
-.import-entity-references-section .import-entity-references-section__import-entity-reference-container .titles .imcms-title {
+.sections-container__edit-area .titles .imcms-title {
     display: inline;
 }
-.import-entity-references-section .import-entity-references-section__import-entity-reference-container .titles .titles__imcms-rb6-entities{
+.sections-container__edit-area .titles .titles__imcms-rb6-entities{
     display: inline;
     float: right;
     width: 30%;
